添加了mysql、RabbitMQ、redis、jenkins、ansible、git、elk的常见面试题